--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -7,6 +7,7 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
         .notes-container {
             display: flex;
@@ -66,10 +67,15 @@
             margin-bottom: 10px;
         }
 
-        .trash-icon {
+        .trash-icon, .archive-icon {
             color: rgb(37, 0, 0);
             cursor: pointer;
             font-size: 1em;
+            margin-left: 10px;
+        }
+
+        #editor-container {
+            height: 200px;
         }
     </style>
 </head>
@@ -90,13 +96,14 @@
                                     <h5><%= note.title %></h5>
                                 </div>
                                 <div style="display: flex; align-items: center;">
+                                    <i class="fas fa-archive archive-icon" onclick="archiveNote('<%= note._id %>')"></i>
                                     <i class="fas fa-trash-alt trash-icon" onclick="deleteNote('<%= note._id %>')"></i>
                                 </div>
                             </li>
                         <% }) %>
                     </ul>
                 <% } else { %>
-                    <p class="text-center">You don't have any notes yet.</p>
+                    <p class="text-center">You don't have any notes yet. <a href="/notes/create">Create one now</a>.</p>
                 <% } %>
             </div>
             <div class="note-content" id="note-content">
@@ -105,7 +112,9 @@
         </div>
     </div>
 
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="/js/notes.js"></script>
+    
     <%- include('partials/footer') %>
 </body>
 </html>
