--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,22 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">NoteTaking</a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-            <li class="nav-item <%= currentPath === '/' ? 'active' : '' %>">
-              <a class="nav-link" href="/">Notes</a>
-            </li>
-            <li class="nav-item <%= currentPath === '/profile' ? 'active' : '' %>">
-                <a class="nav-link" href="/users/profile">User Profile</a>
-              </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/logout">Logout</a>
-            </li>
-          </ul>
-    </div>
-  </nav>
-  <style>
-    .active .nav-link {
-        font-weight: bold;
-        color: #007bff;
-    }
-  </style>
+  <a class="navbar-brand" href="/">NoteTaking</a>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav">
+      
+      <li class="nav-item <%= currentPath === '/' ? 'active' : '' %>">
+        <a class="nav-link" href="/">Notes</a>
+      </li>
+      
+      <li class="nav-item <%= currentPath === '/archived' ? 'active' : '' %>">
+        <a class="nav-link" href="/notes/archived">Archive</a>
+      </li>
+      
+      <li class="nav-item <%= currentPath === '/profile' ? 'active' : '' %>">
+        <a class="nav-link" href="/users/profile">User Profile</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="/users/logout">Logout</a>
+      </li>
+    </ul>
+  </div>
+  <button id="theme-toggle" class="btn btn-secondary">Toggle Theme</button>
+</nav>
+
+<style>
+  .active .nav-link {
+    font-weight: bold;
+    color: #007bff;
+  }
+</style>
