--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Notes</title>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
         .notes-container {
             display: flex;
-            height: calc(100vh - 100px); /* Adjusting height to consider header and footer */
+            height: calc(100vh - 100px);
+            /* Adjusting height to consider header and footer */
             margin-top: 20px;
         }
 
@@ -67,7 +74,8 @@
             margin-bottom: 10px;
         }
 
-        .trash-icon, .archive-icon {
+        .trash-icon,
+        .archive-icon {
             color: rgb(37, 0, 0);
             cursor: pointer;
             font-size: 1em;
@@ -79,42 +87,50 @@
         }
     </style>
 </head>
+
 <body>
     <%- include('partials/header', { currentPath }) %>
-    <div class="container">
-        <div class="notes-container">
-            <div class="notes-list">
-                <h1 class="text-center">Notes</h1>
-                <div class="create-note-button">
-                    <a href="#" onclick="loadNoteContent(null)" class="btn btn-primary btn-block">Create New Note</a>
+        <div class="container">
+            <div class="notes-container">
+                <div class="notes-list">
+                    <h1 class="text-center">Notes</h1>
+                    <div class="create-note-button">
+                        <a href="#" onclick="loadNoteContent(null)" class="btn btn-primary btn-block">Create New
+                            Note</a>
+                    </div>
+                    <% if (notes && notes.length> 0) { %>
+                        <ul class="list-group">
+                            <% notes.forEach(note=> { %>
+                                <li class="note-item list-group-item">
+                                    <div onclick="loadNoteContent('<%= note._id %>')" style="flex-grow: 1;">
+                                        <h5>
+                                            <%= note.title %>
+                                        </h5>
+                                    </div>
+                                    <div style="display: flex; align-items: center;">
+                                        <i class="fas fa-archive archive-icon"
+                                            onclick="archiveNote('<%= note._id %>')"></i>
+                                        <i class="fas fa-trash-alt trash-icon"
+                                            onclick="deleteNote('<%= note._id %>')"></i>
+                                    </div>
+                                </li>
+                                <% }) %>
+                        </ul>
+                        <% } else { %>
+                            <p class="text-center">You don't have any notes yet. <a href="/notes/create">Create one
+                                    now</a>.</p>
+                            <% } %>
                 </div>
-                <% if (notes && notes.length > 0) { %>
-                    <ul class="list-group">
-                        <% notes.forEach(note => { %>
-                            <li class="note-item list-group-item">
-                                <div onclick="loadNoteContent('<%= note._id %>')" style="flex-grow: 1;">
-                                    <h5><%= note.title %></h5>
-                                </div>
-                                <div style="display: flex; align-items: center;">
-                                    <i class="fas fa-archive archive-icon" onclick="archiveNote('<%= note._id %>')"></i>
-                                    <i class="fas fa-trash-alt trash-icon" onclick="deleteNote('<%= note._id %>')"></i>
-                                </div>
-                            </li>
-                        <% }) %>
-                    </ul>
-                <% } else { %>
-                    <p class="text-center">You don't have any notes yet. <a href="/notes/create">Create one now</a>.</p>
-                <% } %>
-            </div>
-            <div class="note-content" id="note-content">
-                <p>Select a note to view its content.</p>
+                <div class="note-content" id="note-content">
+                    <p>Select a note to view its content.</p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="/js/notes.js"></script>
-    
-    <%- include('partials/footer') %>
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        <script src="/js/notes.js"></script>
+
+        <%- include('partials/footer') %>
 </body>
+
 </html>
