--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">NoteTaking</a>
-  <div class="collapse navbar-collapse">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       
       <li class="nav-item <%= currentPath === '/' ? 'active' : '' %>">
@@ -19,8 +22,8 @@
         <a class="nav-link" href="/users/logout">Logout</a>
       </li>
     </ul>
+    <button id="theme-toggle" class="btn btn-secondary ml-auto">Toggle Theme</button>
   </div>
-  <button id="theme-toggle" class="btn btn-secondary">Toggle Theme</button>
 </nav>
 
 <style>
