--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css"> <!-- Include your CSS here -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
     <style>
         body {
             background-color: #f8f9fa;
@@ -70,7 +74,6 @@
                                 </form>
                                 <br>
                                 <!-- Delete Profile Form -->
-
                                 <form id="delete-profile-form" action="/users/delete-user-profile" method="POST">
                                     <button type="submit" class="btn btn-danger">Delete Profile</button>
                                 </form>
@@ -78,13 +81,13 @@
         </div>
 
         <%- include('partials/footer') %>
-        <script>
-            document.getElementById('delete-profile-form').addEventListener('submit', function(event) {
-                if (!confirm('Are you sure you want to delete your profile? This action cannot be undone.')) {
-                    event.preventDefault();
-                }
-            });
-        </script>
+            <script>
+                document.getElementById('delete-profile-form').addEventListener('submit', function (event) {
+                    if (!confirm('Are you sure you want to delete your profile? This action cannot be undone.')) {
+                        event.preventDefault();
+                    }
+                });
+            </script>
 </body>
 
 </html>
